src/native/jalium.native.core/include/jalium_api.h

// ============================================================================
// Transform Stack
// ============================================================================

/// Pushes a transform matrix onto the stack.
/// @param rt The render target.
/// @param matrix The 3x2 transform matrix (column-major, 6 floats).
JALIUM_API void jalium_push_transform(JaliumRenderTarget* rt, const float* matrix);
/// Pops the top transform from the stack.
/// @param rt The render target.
JALIUM_API void jalium_pop_transform(JaliumRenderTarget* rt);
/// Pushes a clip rectangle onto the stack.
/// @param rt The render target.
/// @param x The x coordinate.
/// @param y The y coordinate.
/// @param width The width.
/// @param height The height.
JALIUM_API void jalium_push_clip(JaliumRenderTarget* rt, float x, float y, float width, float height);
/// Pushes a clip rectangle with ALIASED anti-aliasing (hard pixel boundary).
/// Used for dirty region clips where semi-transparent edges cause artifacts.
/// @param rt The render target.
/// @param x The x coordinate.
/// @param y The y coordinate.
/// @param width The width.
/// @param height The height.
JALIUM_API void jalium_push_clip_aliased(JaliumRenderTarget* rt, float x, float y, float width, float height);
/// Pushes a rounded rectangle clip onto the stack using a geometry mask layer.
/// @param rt The render target.
/// @param x The x coordinate.
/// @param y The y coordinate.
/// @param width The width.
/// @param height The height.
/// @param rx The x radius of the corners.
/// @param ry The y radius of the corners.
JALIUM_API void jalium_push_rounded_rect_clip(JaliumRenderTarget* rt, float x, float y, float width, float height, float rx, float ry);
/// Pushes an INVERSE (exclude) rounded rectangle clip onto the stack:
/// subsequent drawing keeps only the area OUTSIDE the rounded rect (the
/// interior is masked away). Backends without inverse-clip support push a
/// balanced no-op clip and draw unmasked. Pop with jalium_pop_clip.
/// @param rt The render target.
/// @param x The x coordinate.
/// @param y The y coordinate.
/// @param width The width.
/// @param height The height.
/// @param rx The x radius of the corners.
/// @param ry The y radius of the corners.
JALIUM_API void jalium_push_rounded_rect_clip_exclude(JaliumRenderTarget* rt, float x, float y, float width, float height, float rx, float ry);
/// Pops the top clip from the stack.
/// @param rt The render target.
JALIUM_API void jalium_pop_clip(JaliumRenderTarget* rt);
/// Punches a transparent rectangular hole in the current render target.
/// @param rt The render target.
/// @param x The x coordinate.
/// @param y The y coordinate.
/// @param width The width.
/// @param height The height.
JALIUM_API void jalium_punch_transparent_rect(JaliumRenderTarget* rt, float x, float y, float width, float height);
/// Pushes an opacity value onto the stack.
/// @param rt The render target.
/// @param opacity The opacity (0.0 - 1.0).
JALIUM_API void jalium_push_opacity(JaliumRenderTarget* rt, float opacity);
/// Pops the top opacity from the stack.
/// @param rt The render target.
JALIUM_API void jalium_pop_opacity(JaliumRenderTarget* rt);
/// Sets the current shape type for SDF rect rendering.
/// @param rt The render target.
/// @param type 0 = RoundedRect (default), 1 = SuperEllipse.
/// @param n SuperEllipse exponent (e.g. 4.0 for squircle).
JALIUM_API void jalium_set_shape_type(JaliumRenderTarget* rt, int type, float n);
// ============================================================================
// Brush Management
// ============================================================================

/// Creates a solid color brush.
/// @param ctx The rendering context.
/// @param r Red component (0.0 - 1.0).
/// @param g Green component (0.0 - 1.0).
/// @param b Blue component (0.0 - 1.0).
/// @param a Alpha component (0.0 - 1.0).
/// @return A handle to the created brush, or nullptr on failure.
JALIUM_API JaliumBrush* jalium_brush_create_solid(JaliumContext* ctx, float r, float g, float b, float a);
/// Creates a linear gradient brush.
/// @param ctx The rendering context.
/// @param startX The start x coordinate.
/// @param startY The start y coordinate.
/// @param endX The end x coordinate.
/// @param endY The end y coordinate.
/// @param stops Array of gradient stops (position, r, g, b, a for each stop).
/// @param stopCount Number of gradient stops.
/// @param extendMode Spread method: 0=Pad, 1=Repeat, 2=Reflect.
/// @return A handle to the created brush, or nullptr on failure.
JALIUM_API JaliumBrush* jalium_brush_create_linear_gradient(
    JaliumContext* ctx,
    float startX, float startY, float endX, float endY,
    const JaliumGradientStop* stops,
    uint32_t stopCount,
    uint32_t extendMode
);
/// Creates a radial gradient brush.
/// @param ctx The rendering context.
/// @param centerX The center x coordinate.
/// @param centerY The center y coordinate.
/// @param radiusX The x radius.
/// @param radiusY The y radius.
/// @param originX The gradient origin x coordinate.
/// @param originY The gradient origin y coordinate.
/// @param stops Array of gradient stops.
/// @param stopCount Number of gradient stops.
/// @param extendMode Spread method: 0=Pad, 1=Repeat, 2=Reflect.
/// @return A handle to the created brush, or nullptr on failure.
JALIUM_API JaliumBrush* jalium_brush_create_radial_gradient(
    JaliumContext* ctx,
    float centerX, float centerY, float radiusX, float radiusY,
    float originX, float originY,
    const JaliumGradientStop* stops,
    uint32_t stopCount,
    uint32_t extendMode
);
/// Destroys a brush.
/// @param brush The brush to destroy.
JALIUM_API void jalium_brush_destroy(JaliumBrush* brush);
// ============================================================================
// Text Format Management
// ============================================================================

/// Creates a text format.
/// @param ctx The rendering context.
/// @param fontFamily The font family name.
/// @param fontSize The font size in DIPs.
/// @param fontWeight The font weight (100-900, 400 = normal, 700 = bold).
/// @param fontStyle The font style (0 = normal, 1 = italic, 2 = oblique).
/// @return A handle to the created text format, or nullptr on failure.
JALIUM_API JaliumTextFormat* jalium_text_format_create(
    JaliumContext* ctx,
    const wchar_t* fontFamily,
    float fontSize,
    int32_t fontWeight,
    int32_t fontStyle
);
/// Destroys a text format.
/// @param format The text format to destroy.
JALIUM_API void jalium_text_format_destroy(JaliumTextFormat* format);
/// Sets the text alignment.
/// @param format The text format.
/// @param alignment The alignment (0 = leading, 1 = trailing, 2 = center, 3 = justified).
JALIUM_API void jalium_text_format_set_alignment(JaliumTextFormat* format, int32_t alignment);
/// Sets the paragraph alignment.
/// @param format The text format.
/// @param alignment The alignment (0 = near/top, 1 = far/bottom, 2 = center).
JALIUM_API void jalium_text_format_set_paragraph_alignment(JaliumTextFormat* format, int32_t alignment);
/// Sets the text trimming mode.
/// @param format The text format.
/// @param trimming The trimming mode (0 = none, 1 = character ellipsis, 2 = word ellipsis).
JALIUM_API void jalium_text_format_set_trimming(JaliumTextFormat* format, int32_t trimming);
/// Sets word wrapping mode.
/// @param wrapping 0=wrap, 1=no_wrap, 2=character, 3=emergency_break
JALIUM_API void jalium_text_format_set_word_wrapping(JaliumTextFormat* format, int32_t wrapping);
/// Sets line spacing.
/// @param method 0=default, 1=uniform, 2=proportional
JALIUM_API void jalium_text_format_set_line_spacing(JaliumTextFormat* format, int32_t method, float spacing, float baseline);
/// Sets maximum number of lines (0 = unlimited).
JALIUM_API void jalium_text_format_set_max_lines(JaliumTextFormat* format, uint32_t maxLines);
/// Draws a previously captured transition bitmap to the current render target.
/// @param rt Render target handle.
/// @param slot Transition slot to draw from (0 or 1).
/// @param x Destination X position (in DIPs).
/// @param y Destination Y position (in DIPs).
/// @param w Destination width (in DIPs).
/// @param h Destination height (in DIPs).
/// @param opacity Opacity to apply (0.0 - 1.0).
JALIUM_API void jalium_draw_captured_transition(JaliumRenderTarget* rt,
    int32_t slot, float x, float y, float w, float h, float opacity);
// ============================================================================
// Liquid Glass Effect
// ============================================================================

/// Draws a liquid glass effect with SDF-based refraction, highlight, and inner shadow.
/// Captures current render target content, applies Gaussian blur, then renders
/// the full liquid glass pipeline (refraction + chromatic aberration + edge highlight
/// + inner shadow + composite) in a single pass.
/// @param rt The render target.
/// @param x X position of the glass panel.
/// @param y Y position of the glass panel.
/// @param w Width of the glass panel.
/// @param h Height of the glass panel.
/// @param cornerRadius Border radius in pixels.
/// @param blurRadius Gaussian blur radius in pixels (default 8).
/// @param refractionAmount UV displacement strength in pixels (default 60).
/// @param chromaticAberration Color dispersion 0-1 (0=off, 1=full).
/// @param tintR Tint color red component (0-1).
/// @param tintG Tint color green component (0-1).
/// @param tintB Tint color blue component (0-1).
/// @param tintOpacity Tint overlay opacity (0-1).
// ============================================================================
// Element Effect Capture & Rendering
// ============================================================================

/// Begins capturing element content into an offscreen bitmap for effect processing.
/// All subsequent drawing calls will be redirected to the offscreen bitmap.
/// @param rt The render target.
/// @param x X position of the capture area (in DIPs).
/// @param y Y position of the capture area (in DIPs).
/// @param w Width of the capture area (in DIPs).
/// @param h Height of the capture area (in DIPs).
JALIUM_API void jalium_effect_begin_capture(JaliumRenderTarget* rt,
    float x, float y, float w, float h);
/// Ends capturing element content and restores the main render target.
/// @param rt The render target.
JALIUM_API void jalium_effect_end_capture(JaliumRenderTarget* rt);
/// Applies a Gaussian blur effect to the captured element content and draws it.
/// Must be called after jalium_effect_begin_capture / jalium_effect_end_capture.
/// @param rt The render target.
/// @param x X position to draw at (in DIPs).
/// @param y Y position to draw at (in DIPs).
/// @param w Width of the draw area (in DIPs).
/// @param h Height of the draw area (in DIPs).
/// @param radius Blur radius (in DIPs).
JALIUM_API void jalium_draw_blur_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h, float radius,
    float uvOffsetX, float uvOffsetY);
/// Applies a drop shadow effect to the captured element content and draws it.
/// Draws the shadow (offset + blurred alpha) behind the original content.
/// Must be called after jalium_effect_begin_capture / jalium_effect_end_capture.
/// @param rt The render target.
/// @param x X position to draw at (in DIPs).
/// @param y Y position to draw at (in DIPs).
/// @param w Width of the draw area (in DIPs).
/// @param h Height of the draw area (in DIPs).
/// @param blurRadius Shadow blur radius (in DIPs).
/// @param offsetX Shadow X offset (in DIPs).
/// @param offsetY Shadow Y offset (in DIPs).
/// @param r Shadow color red (0-1).
/// @param g Shadow color green (0-1).
/// @param b Shadow color blue (0-1).
/// @param a Shadow opacity (0-1).
JALIUM_API void jalium_draw_drop_shadow_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    float blurRadius, float offsetX, float offsetY,
    float r, float g, float b, float a,
    float uvOffsetX, float uvOffsetY,
    float cornerTL, float cornerTR, float cornerBR, float cornerBL);
JALIUM_API void jalium_draw_outer_glow_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    float glowSize, float r, float g, float b, float a, float intensity,
    float uvOffsetX, float uvOffsetY,
    float cornerTL, float cornerTR, float cornerBR, float cornerBL);
JALIUM_API void jalium_draw_inner_shadow_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    float blurRadius, float offsetX, float offsetY,
    float r, float g, float b, float a,
    float uvOffsetX, float uvOffsetY,
    float cornerTL, float cornerTR, float cornerBR, float cornerBL);
JALIUM_API void jalium_draw_color_matrix_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    const float* matrix);
JALIUM_API void jalium_draw_emboss_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    float amount, float lightDirX, float lightDirY, float relief);
/// Applies a custom pixel shader effect to the captured element content and draws it.
/// The captured content is exposed to the shader as t0/s0, and the provided
/// float constants are uploaded to constant buffer register b0.
JALIUM_API void jalium_draw_shader_effect(JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    const uint8_t* shaderBytecode,
    uint32_t shaderBytecodeSize,
    const float* constants,
    uint32_t constantFloatCount);
JALIUM_API void jalium_draw_liquid_glass(
    JaliumRenderTarget* rt,
    float x, float y, float w, float h,
    float cornerRadius,
    float blurRadius,
    float refractionAmount,
    float chromaticAberration,
    float tintR, float tintG, float tintB, float tintOpacity,
    float lightX, float lightY,
    float highlightBoost,
    int32_t shapeType,
    float shapeExponent,
    int32_t neighborCount,
    float fusionRadius,
    const float* neighborData
);