src/managed/Jalium.UI.Interop/NativeMethods.cs


    /// <summary>
    /// Draws a previously captured transition bitmap to the current render target.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_captured_transition")]
    internal static partial void DrawCapturedTransition(nint renderTarget,
        int slot, float x, float y, float w, float h, float opacity);

    // ========================================================================
    // Element Effect Capture & Rendering
    // ========================================================================

    /// <summary>
    /// Begins capturing element content into an offscreen bitmap for effect processing.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_effect_begin_capture")]
    internal static partial void EffectBeginCapture(nint renderTarget,
        float x, float y, float w, float h);

    /// <summary>
    /// Ends capturing element content and restores the main render target.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_effect_end_capture")]
    internal static partial void EffectEndCapture(nint renderTarget);

    /// <summary>
    /// Applies a Gaussian blur effect to the captured element content and draws it.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_blur_effect")]
    internal static partial void DrawBlurEffect(nint renderTarget,
        float x, float y, float w, float h, float radius,
        float uvOffsetX, float uvOffsetY);

    /// <summary>
    /// Applies a drop shadow effect to the captured element content and draws it.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_drop_shadow_effect")]
    internal static partial void DrawDropShadowEffect(nint renderTarget,
        float x, float y, float w, float h,
        float blurRadius, float offsetX, float offsetY,
        float r, float g, float b, float a,
        float uvOffsetX, float uvOffsetY,
        float cornerTL, float cornerTR, float cornerBR, float cornerBL);

    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_outer_glow_effect")]
    internal static partial void DrawOuterGlowEffect(nint renderTarget,
        float x, float y, float w, float h,
        float glowSize, float r, float g, float b, float a, float intensity,
        float uvOffsetX, float uvOffsetY,
        float cornerTL, float cornerTR, float cornerBR, float cornerBL);

    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_inner_shadow_effect")]
    internal static partial void DrawInnerShadowEffect(nint renderTarget,
        float x, float y, float w, float h,
        float blurRadius, float offsetX, float offsetY,
        float r, float g, float b, float a,
        float uvOffsetX, float uvOffsetY,
        float cornerTL, float cornerTR, float cornerBR, float cornerBL);

    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_color_matrix_effect")]
    internal static partial void DrawColorMatrixEffect(nint renderTarget,
        float x, float y, float w, float h,
        ReadOnlySpan<float> matrix);

    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_emboss_effect")]
    internal static partial void DrawEmbossEffect(nint renderTarget,
        float x, float y, float w, float h,
        float amount, float lightDirX, float lightDirY, float relief);

    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_shader_effect")]
    internal static partial void DrawShaderEffect(nint renderTarget,
        float x, float y, float w, float h,
        [In] byte[] shaderBytecode, uint shaderBytecodeSize,
        [In] float[] constants, uint constantFloatCount);

    // HLSL-source custom shader effect — the cross-backend path. Both backends
    // compile the supplied SM6 HLSL at runtime (D3D12: D3DCompile, Vulkan:
    // DXC→SPIR-V), so an effect that carries HLSL source works on either backend
    // (the byte[] DXBC path above is D3D12-only — Vulkan can't consume it).
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_shader_effect_hlsl", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void DrawShaderEffectFromSource(nint renderTarget,
        float x, float y, float w, float h,
        string hlslSource,
        [In] float[] constants, uint constantFloatCount);

    /// <summary>
    /// Draws a liquid glass effect with SDF-based refraction, highlight, and inner shadow.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_draw_liquid_glass")]
    internal static partial void DrawLiquidGlass(
        nint renderTarget,
        float x, float y, float width, float height,
        float cornerRadius,
        float blurRadius,
        float refractionAmount,
        float chromaticAberration,
        float tintR, float tintG, float tintB, float tintOpacity,
        float lightX, float lightY,
        float highlightBoost,
        int shapeType,
        float shapeExponent,
        int neighborCount,
        float fusionRadius,
        nint neighborData);

    #endregion

    #region Transform and Clip

    /// <summary>
    /// Pushes a transform matrix.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_transform")]
    internal static unsafe partial void PushTransform(nint renderTarget, float* matrix);

    /// <summary>
    /// Pops the current transform.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_pop_transform")]
    internal static partial void PopTransform(nint renderTarget);

    /// <summary>
    /// Pushes a clip rectangle.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_clip")]
    internal static partial void PushClip(nint renderTarget, float x, float y, float width, float height);

    /// <summary>
    /// Pushes a clip rectangle with ALIASED anti-aliasing (hard pixel boundary).
    /// Used for dirty region clips where semi-transparent edges cause artifacts.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_clip_aliased")]
    internal static partial void PushClipAliased(nint renderTarget, float x, float y, float width, float height);

    /// <summary>
    /// Pushes a rounded rectangle clip using a geometry mask layer.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_rounded_rect_clip")]
    internal static partial void PushRoundedRectClip(nint renderTarget, float x, float y, float width, float height, float rx, float ry);

    /// <summary>
    /// Pushes a per-corner rounded-rect clip with independent radii for each corner.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_per_corner_rounded_rect_clip")]
    internal static partial void PushPerCornerRoundedRectClip(nint renderTarget,
        float x, float y, float width, float height,
        float tl, float tr, float br, float bl);

    /// <summary>
    /// Pushes an INVERSE (exclude) rounded rectangle clip: subsequent drawing keeps
    /// only the area OUTSIDE the rounded rect (its interior is masked away). Used by
    /// glow/highlight overlays that hug an element's edge. Pop with PopClip. Backends
    /// without inverse-clip support push a balanced no-op clip and draw unmasked.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_rounded_rect_clip_exclude")]
    internal static partial void PushRoundedRectClipExclude(nint renderTarget, float x, float y, float width, float height, float rx, float ry);

    /// <summary>
    /// Pops the current clip.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_pop_clip")]
    internal static partial void PopClip(nint renderTarget);

    /// <summary>
    /// Punches a transparent rectangular hole in the current render target.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_punch_transparent_rect")]
    internal static partial void PunchTransparentRect(nint renderTarget, float x, float y, float width, float height);

    /// <summary>
    /// Pushes an opacity value.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_push_opacity")]
    internal static partial void PushOpacity(nint renderTarget, float opacity);

    /// <summary>
    /// Pops the current opacity.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_pop_opacity")]
    internal static partial void PopOpacity(nint renderTarget);

    /// <summary>
    /// Sets the current shape type for SDF rect rendering.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_set_shape_type")]
    internal static partial void SetShapeType(nint renderTarget, int type, float n);

    #endregion

    #region Brush Management

    /// <summary>
    /// Creates a solid color brush.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_brush_create_solid")]
    internal static partial nint BrushCreateSolid(nint context, float r, float g, float b, float a);

    /// <summary>
    /// Creates a linear gradient brush.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_brush_create_linear_gradient")]
    internal static partial nint BrushCreateLinearGradient(
        nint context,
        float startX, float startY, float endX, float endY,
        float[] stops, uint stopCount,
        uint extendMode);

    /// <summary>
    /// Creates a radial gradient brush.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_brush_create_radial_gradient")]
    internal static partial nint BrushCreateRadialGradient(
        nint context,
        float centerX, float centerY, float radiusX, float radiusY,
        float originX, float originY,
        float[] stops, uint stopCount,
        uint extendMode);

    /// <summary>
    /// Destroys a brush.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_brush_destroy")]
    internal static partial void BrushDestroy(nint brush);

    #endregion

    #region Text Format Management

    /// <summary>
    /// Creates a text format.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_create", StringMarshalling = StringMarshalling.Utf16)]
    internal static partial nint TextFormatCreate(nint context, string fontFamily, float fontSize, int fontWeight, int fontStyle);

    /// <summary>
    /// Destroys a text format.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_destroy")]
    internal static partial void TextFormatDestroy(nint textFormat);

    /// <summary>
    /// Sets text alignment.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_alignment")]
    internal static partial void TextFormatSetAlignment(nint textFormat, int alignment);

    /// <summary>
    /// Sets paragraph alignment.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_paragraph_alignment")]
    internal static partial void TextFormatSetParagraphAlignment(nint textFormat, int alignment);

    /// <summary>
    /// Sets text trimming mode.
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_trimming")]
    internal static partial void TextFormatSetTrimming(nint textFormat, int trimming);

    /// <summary>
    /// Sets word wrapping mode (0=wrap, 1=no_wrap, 2=character, 3=emergency_break).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_word_wrapping")]
    internal static partial void TextFormatSetWordWrapping(nint textFormat, int wrapping);

    /// <summary>
    /// Sets line spacing (method: 0=default, 1=uniform, 2=proportional).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_line_spacing")]
    internal static partial void TextFormatSetLineSpacing(nint textFormat, int method, float spacing, float baseline);

    /// <summary>
    /// Sets maximum number of lines (0 = unlimited).
    /// </summary>
    [LibraryImport(CoreLib, EntryPoint = "jalium_text_format_set_max_lines")]
    internal static partial void TextFormatSetMaxLines(nint textFormat, uint maxLines);
